src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__a_description_with_headings_lists_code_and_a_table_renders_as_markdown.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
## Summary

This is **important**, see `the code` and [the docs](https://example.com).

- first
- second

  1. nested one
  2. nested two

```rust
fn main() {}
```

| Name | Role | Team |
| --- | --- | --- |
| Jane | Lead | Core |

---
