src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__a_table_cell_with_a_pipe_or_a_newline_stays_on_one_row.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
| A | B |
| --- | --- |
| a\|b | line one  line two |
