src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__a_task_item_holds_inline_content_directly_like_real_jira_adf.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
- [x] Fix the **login** bug
- [ ] still open
