src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__an_empty_code_fence_encodes_without_an_empty_text_node.snap
---
source: src/tracker/jira/adf.rs
expression: "serde_json::to_string_pretty(&encode(\"```\\n\\n```\")).unwrap()"
---
{
  "content": [
    {
      "type": "codeBlock"
    }
  ],
  "type": "doc",
  "version": 1
}
