src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__an_unknown_container_keeps_its_blocks_apart.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
left col

right col

extension line one

extension line two
