src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__inline_nodes_render_as_their_readable_text.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
@Jane reacted 👍
https://example.com/PROJ-1 due 2023-11-14 status [Done]
