src/tracker/jira/snapshots/crew__tracker__jira__adf__tests__panels_expands_and_quotes_render_as_quoted_or_titled_blocks.snap
---
source: src/tracker/jira/adf.rs
expression: render(&doc)
---
> quoted line one
>
> quoted line two

> careful here

**Details**

hidden text
